--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyImageLoader">
-        <activity android:name=".ImageListActivity"></activity>
+        <activity android:name=".BigImageActivity"></activity>
+        <activity android:name=".ImageListActivity" />
         <activity android:name=".BitmapSizeActivity" />
         <activity android:name=".PreviewImageActivity" />
         <activity android:name=".MainActivity">
